# holiday-everyday

./: .gitignore  Makefile  README.md  example.env  nginx.example.conf  pyproject.toml
agency/: admin.py  apps.py  urls.py  views.py
agency/admin/: __init__.py  inlines.py
agency/fixtures/: tags.json
agency/forms/: __init__.py  multiple.py  project.py
agency/migrations/: 0001_initial.py  0002_alter_image_id_alter_media_id_alter_project_id_and_more.py  0002_alter_project_video.py  0002_project_published_alter_project_preview_image.py  0003_alter_image_name_alter_project_tags.py  0003_alter_project_preview_image_alter_project_video_url.py  0004_alter_media_date_alter_media_link_alter_media_name_and_more.py  0005_alter_image_options_image_order.py  0005_image_created_at.py  0006_project_created_at.py  0007_alter_project_options_alter_project_full_description.py
agency/models/: __init__.py  base.py  feedback.py  image.py  media.py  project.py  review.py  tag.py
agency/serializers/: email.py  image.py  media.py  project.py  review.py  tag.py
agency/utils/: as_html.py  img_converter.py
agency/views/: __init__.py  email.py  media.py  project.py  tag.py
app/configs/: __init__.py  database.py
app/dao/: base.py  database.py  session_maker.py
config/: ckeditor.py  collectstatic.py  email.py  settings.py  tinymce_conf.py  urls.py
scripts/: format.py  lint.py
static/: index.html
static/assets/: About-CxLpyUZ2.js  About-DJJI30Ak.js  CarouselPrevious.vue_vue_type_script_setup_true_lang-Dl6mSkG2.js  Contacts-MrnzaPpD.js  Contacts-bxM2FLD2.js  DrawerFooter.vue_vue_type_script_setup_true_lang-Bssb3FRc.js  DrawerFooter.vue_vue_type_script_setup_true_lang-COsf440L.js  Home-CZCsuzmK.js  Home-nFwonJHS.js  LazyImage-BnUXDqxF.js  LazyImage-e5drzTJc.css  Portfolio-BCyyDZdl.js  Portfolio-CXzvweql.js  PortfolioGrid.vue_vue_type_script_setup_true_lang-C6spZRm4.js  PortfolioGrid.vue_vue_type_script_setup_true_lang-CzEuwLcd.js  PortfolioProject-BTuHbx_m.js  Prices-BCP4H9jT.js  (+14 more)
(+11 files in other folders)
